Use CHROME_LOG_FILE environment variable for headless chrome logging.

Chromedriver/Selenium expects to be able to set the log file using the CHROME_LOG_FILE environment variable.

BUG=698095

Review-Url: https://codereview.chromium.org/2736883002
Cr-Commit-Position: refs/heads/master@{#455625}

Former-commit-id: ea2f917390a886772e5252da913d7998a60bba69